make sure standard video embeds have proper spacing #5

--- a/includes/assets/css/markup-formatting.less
+++ b/includes/assets/css/markup-formatting.less
@@ -189,6 +189,13 @@ a {
 		}
 	}
 
+	& .wp-block-embed.wp-embed-aspect-16-9 .wp-block-embed__wrapper {
+
+		&:before {
+			padding-top: 0 !important;
+		}
+	}
+
 	& .shd-embedded-video-wrapper {
 		position: relative;
 		padding-bottom: 56.25%;
